--- a/css-test-new.html
+++ b/css-test-new.html
@@ -9,14 +9,14 @@
 
 	<body>
 
-		<div id = "container" class = "container">
+		<div id = "container" class = "container container-fluid">
 			<div class = "row mt-3 flex justify-content-end">
-				<!-- <div class = "col"></div> -->
-				<div id = "div0" class = "col-8 rounded">
+				<div id = "div00" class = "col-3 rounded"></div>
+				<div id = "div0" class = "col-9 rounded">
 			</div>
 
 			<div class = "row mt-3 d-flex justify-content-between">
-				<div id = "div1" class = "col-3 rounded"></div>
+				<div id = "div1" class = "col-2 rounded"></div>
 				<div id = "div2" class = "col-4 rounded"></div>
 				<div id = "div3" class = "col-4 rounded"></div>
 			</div>
@@ -27,18 +27,4 @@
 
 		</div>
 	</body>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 </html>
