--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 	<head>
-		<link rel="stylesheet" href="css-test-new.css">
+		<link rel="stylesheet" href="styles.css">
         <script src="js/vendor/modernizr-2.8.3.min.js"></script>
         <!-- CSS only -->
 		<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">
@@ -29,4 +29,3 @@
 	</body>
 </html>
 
-<!-- d-flex justify-content-between -->
